# stratup-automation

./: .gitignore  README.md  Startup_Launcher.lnk  config.yaml  create_scheduled_task.ps1  create_shortcut.ps1  launcher.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  start_launcher.vbs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
core/: conditions.py  config.py  logger.py  metrics.py  notifier.py  retry.py  vault.py
dashboard/: config.yaml  dashboard_generator.py
docs/: ARCHITECTURE.md  CICD.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_PLAN.md  TECHNICAL_DOCS.md  USER_GUIDE.md  USER_MANUAL.md
lmarena/kite-simulation-physics-build/: index.html
lmarena/kite-simulation-physics-build/src/: App.tsx
phases/: phase1_system.py  phase2_apps.py  phase3_browsers.py
profiles/: home.yaml  work.yaml
scripts/: connect_vpn.ps1
tests/: conftest.py
tests/unit/: test_config.py  test_new_features.py  test_retry.py
